# automation-toys

./: .gitignore  MANIFEST.in  README.md  noxfile.py  requirements.txt  setup.cfg
autotoys/: hooks.py
autotoys/cmd/: toys.py
autotoys/common/: i18n.py  pdfutils.py  utils.py
autotoys/common/tickets/: traffic.py
i18n/: zh_CN.po
