[metadata]
name = autotoys
summary = Python Automation Toys
author = fjboy
author_email = 2535463841@qq.com
home_page = https://github.com/fjboy/automation-toys

[global]
setup-hooks =
    autotoys.hooks.setup_hook

[files]
packages =
    autotoys

[entry_points]
console_scripts =
    auto-toys = autotoys.cmd.traffic:main
